--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -5,7 +5,7 @@
   transition: all 0.25s ease-out 0s;
   position: fixed;
   right: 0;
-  background-color: rgb(51, 51, 54);
+  background-color: #17a2b8;
   width: 65%;
   min-height: 100%;
   z-index: 500;
@@ -65,7 +65,7 @@
     display: block;
     min-width: 100%;
     transform: none;
-    background-color: #28208c;
+    background-color: #17a2b8;
     min-height: 0;
   }
 
@@ -117,7 +117,7 @@
     flex-direction: row;
   }
   .nav-internal-links {
-    max-width: 40%;
+    max-width: 60%;
     margin-left: 30px;
   }
 
