--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -5,10 +5,10 @@
   transition: all 0.25s ease-out 0s;
   position: fixed;
   right: 0;
-  background-color: #17a2b8;
+  background-color: rgb(51, 51, 54);
   width: 65%;
   min-height: 100%;
-  z-index: 500;
+  z-index: 200;
   transform: translateX(65vw);
 }
 
@@ -55,7 +55,7 @@
 }
 .nav-internal-links a:hover,
 .nav-internal-links .active {
-  color: #17a2b8;
+  color: #28208c;
   background-color: rgba(250, 250, 250, 0.6);
 }
 
@@ -65,7 +65,7 @@
     display: block;
     min-width: 100%;
     transform: none;
-    background-color: #17a2b8;
+    background-color: #28208c;
     min-height: 0;
   }
 
@@ -76,9 +76,14 @@
   .nav-internal-links a:hover {
     background-color: rgba(250, 250, 250, 0.8);
   }
+  .nav-internal-links a:active {
+    background-color: rgba(250, 250, 250, 0.8);
+    color: #28208c;
+  }
 
   .main-nav .active {
     background-color: rgba(250, 250, 250, 0.6);
+    color: #28208c;
   }
 
   .nav-internal-links {
